--- a/netlify.toml
+++ b/netlify.toml
@@ -1,20 +1,72 @@
-# This file tells Netlify how to build your project.
+# Netlify Configuration File (netlify.toml)
+# https://docs.netlify.com/configure-builds/file-based-configuration/
 
+# --- Build Settings ---
 [build]
-  # This tells Netlify where your backend functions are
+  # Directory containing Netlify Functions (serverless backend).
   functions = "functions/"
   
-  # This tells Netlify that your frontend is in the root directory
+  # Directory containing the deploy-ready HTML, CSS, JS, and assets.
+  # "." means the root directory of your project.
   publish = "."
 
-  # This tells Netlify to run NO build command for the frontend.
-  # This is the line that fixes your error.
+  # Build command. Since this is a static site with no build tools (like React, Vue, etc.),
+  # we leave this empty. Netlify will just deploy the files in the 'publish' directory.
   command = ""
 
-# This is a "redirect" rule that makes your function easier to call.
-# It forwards any request from "/api/*" to your "register" function.
-[[redirects]]
-  from = "/api/*"
-  to = "/.netlify/functions/:splat"
-  status = 200
+# --- Redirects and Rewrites ---
+# Redirects allow you to map URL paths.
+# https://docs.netlify.com/routing/redirects/
 
+# Rule to proxy API calls:
+# Any request starting with "/api/" will be forwarded internally
+# to the corresponding Netlify Function.
+# Example: A request to "/api/register" executes the "functions/register.js" function.
+[[redirects]]
+  # The path the browser requests. "*" is a wildcard.
+  from = "/api/*"
+  # The internal path to the Netlify Function. ":splat" captures the wildcard part.
+  to = "/.netlify/functions/:splat"
+  # HTTP status code for the redirect (200 means it's an internal proxy, not a browser redirect).
+  status = 200
+  # Optionally force the redirect even if a file exists at the 'from' path
+  # force = true # Usually not needed for /api/ paths
+
+
+# --- Custom Headers ---
+# Headers control browser caching, security policies, etc.
+# https://docs.netlify.com/routing/headers/
+
+# Cache settings for HTML pages (including index.html, verify.html)
+[[headers]]
+  for = "/*.html"
+  [headers.values]
+    # Cache in public caches (like CDNs) and browsers for 60 seconds.
+    # must-revalidate: Check with the server if the cache is still valid after 60s.
+    Cache-Control = "public, max-age=60, must-revalidate"
+
+# Cache settings for the Service Worker (CRITICAL for PWA updates)
+[[headers]]
+  for = "/sw.js"
+  [headers.values]
+    # IMPORTANT: Never let HTTP cache the service worker long-term.
+    # Browsers have their own update mechanism. 'no-cache' forces revalidation.
+    Cache-Control = "no-cache" 
+    # Also tell CDNs not to cache it (redundant but safe)
+    Netlify-CDN-Cache-Control = "no-cache"
+
+# Cache settings for the Web App Manifest
+[[headers]]
+  for = "/manifest.json"
+  [headers.values]
+    # Like the service worker, ensure this is checked frequently.
+    Cache-Control = "public, max-age=0, must-revalidate"
+
+# Cache settings for static assets (images, icons in /assets/)
+[[headers]]
+  # Apply to all files within the /assets/ directory and its subdirectories.
+  for = "/assets/*"
+  [headers.values]
+    # Cache "forever" (1 year). Browsers won't even check for updates
+    # unless you change the filename. Good for versioned assets or favicons.
+    Cache-Control = "public, max-age=31536000, immutable"
