feat: Implement staff login and attendee verification system
- Added `verify.js` for handling the UI and logic for staff login and attendee verification.
- Created API functions for staff login, fetching public status, getting system status, and searching attendees.
- Implemented database interactions using PostgreSQL for attendee data and system configuration.
- Added offline HTML page for better user experience during network issues.
- Created SQL script for initializing the system configuration table with default values.

--- a/netlify.toml
+++ b/netlify.toml
@@ -62,11 +62,22 @@
     # Like the service worker, ensure this is checked frequently.
     Cache-Control = "public, max-age=0, must-revalidate"
 
-# Cache settings for static assets (images, icons in /assets/)
+# Cache settings for static assets (CSS, JS, images, etc.)
+# This is a fallback for any assets not covered by more specific rules below.
 [[headers]]
-  # Apply to all files within the /assets/ directory and its subdirectories.
   for = "/assets/*"
   [headers.values]
-    # Cache "forever" (1 year). Browsers won't even check for updates
-    # unless you change the filename. Good for versioned assets or favicons.
+    # Cache for a long time. 'immutable' tells the browser the file will not change.
     Cache-Control = "public, max-age=31536000, immutable"
+
+# Specific, aggressive cache settings for CSS files.
+[[headers]]
+  for = "/assets/css/*"
+  [headers.values]
+    Cache-control = "public, max-age=31536000, immutable"
+
+# Specific, aggressive cache settings for JS files.
+[[headers]]
+  for = "/assets/js/*"
+  [headers.values]
+    Cache-control = "public, max-age=31536000, immutable"
