Add favicon and manifest for E-Pass Check-In application
- Added favicon.ico file for application branding.
- Created manifest.json for PWA support with app details, icons, and theme colors.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "private": true,
     "type": "module",
+    "main": "index.html",
     "scripts": {
         "dev": "netlify dev"
     },
@@ -10,5 +11,7 @@
         "cloudinary": "^1.41.3",
         "postgres": "^3.4.3",
         "qrcode": "^1.5.3"
-    }
+    },
+    "author": "EllowDigital",
+    "license": "ISC"
 }
