Add E-Pass verification functionality with QR code scanning and check-in support
- Implemented serverless function for verifying registration IDs and handling check-in actions.
- Created a user interface for the E-Pass verification kiosk, including live camera scanning and manual entry options.
- Integrated Bootstrap for responsive design and improved user experience.
- Added logging and feedback mechanisms for user interactions and API responses.
- Ensured CORS support for the serverless function to handle requests from the frontend.

--- a/.env
+++ b/.env
@@ -12,3 +12,4 @@ CLOUDINARY_API_SECRET="txRYQJWyMBnzeLc7NxNcchsoSOU"
 
 # FORMSUBMIT
 FORMSUBMIT_EMAIL="sarwanyadav6174@gmail.com"
+PGSSLMODE = 'require'
