--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "ellowreg-in",
-  "version": "6.8.0",
+  "version": "6.8.2",
   "description": "Event Management & Registration System (EMRS) by EllowDigital for handling multi-event registrations, media uploads, analytics, and Google Sheets sync.",
   "private": true,
   "author": "EllowDigital",
   "license": "MIT",
-  "main": "index.js",
+  "main": "index.html",
   "engines": {
     "node": "^24.0.1"
   },
