--- a/netlify.toml
+++ b/netlify.toml
@@ -47,7 +47,7 @@
     X-XSS-Protection = "1; mode=block"
     Referrer-Policy = "strict-origin-when-cross-origin"
     Strict-Transport-Security = "max-age=63072000; includeSubDomains; preload"
-    Permissions-Policy = "geolocation=(), microphone=(), camera=()"
+  Permissions-Policy = "camera=(self), popups=(self)"
 
 [[headers]]
   for = "/*.html"
